# ocr

./: README.md  pyproject.toml  test.py
src/ocr/: .img_to_text.py.swp  get_img.py  img_to_text.py  modeling.py  ocr_a.py  url.html  utils.py
