[project]
name = "ocr"
version = "0.1.1"
description = "Image to Text (OCR)"
authors = [
    {name = "sunwoo", email = "summerham22@gmail.com"},
]
dependencies = ["easyocr>=1.7.2", "torch==2.2.2", "numpy==1.26.4", "BeautifulSoup4>=4.12.3", "requests>=2.32.3", "transformers>=4.46.3", "boto3>=1.35.69", "requests-html>=0.10.0", "lxml-html-clean>=0.4.1", "pymongo>=4.10.1"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]
